another minor fix about scrollbar

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1921,7 +1921,9 @@ label {
 
 .tweetview .scrollbar_track {
 	z-index: 20;
-	margin: 10px 5px;
+	margin: 10px 0px;
+	width: 10px;
+	padding: 0 3px;
 }
 
 .tweetview .listview_header {
